--- a/components/projects/photos.tex
+++ b/components/projects/photos.tex
@@ -1,20 +1,20 @@
 \resumeProjectHeading
-        {\textbf{Photos by Vedant Modi} $|$ \emph{TypeScript/JavaScript, Node.js, Python, React}}{November 2025}
-        \resumeItemListStart
-        \resumeItem{Automated the ETL process for large photos by building
-         a Python ingestion engine within a CI/CD pipeline. Successfully
-        extracting GPS coordinates and metadata from \textbf{over 500 photos}.}
-        \resumeItem{Maximized system availability and minimized latency by
-        decoupling static asset storage to a global content delivery network,
-        ensuring short load times for high-resolution media.}
-        \resumeItem{Developed a responsive map visualization using React that
-        enables dynamic filtering of the photo dataset by year and geographic
-        coordinates.}
-        
+{\textbf{Photos by Vedant Modi} $|$ \emph{TypeScript/JavaScript, Node.js, Python, React}}{November 2025}
+\resumeItemListStart
+\resumeItem{Automated large-scale photo ETL by building a Python ingestion
+	engine within a CI/CD pipeline, extracting GPS coordinates and metadata
+	from \textbf{500+ photos}.}
+\resumeItem{Maximized system availability and minimized latency by
+	decoupling static asset storage to a global content delivery network,
+	ensuring short load times for high-resolution media.}
+\resumeItem{Developed a responsive map visualization using React that
+	enables dynamic filtering of the photo dataset by year and geographic
+	coordinates.}
 
 
-        % \resumeItem{Unified user interface by \textbf{modeling 50 components} in Figma
-        % before development}
-        % \resumeItem{Hosted backend server by managing a PostgresSQL database
-        % within a Docker container on an AWS EC2 instance}
-          \resumeItemListEnd
+
+% \resumeItem{Unified user interface by \textbf{modeling 50 components} in Figma
+% before development}
+% \resumeItem{Hosted backend server by managing a PostgresSQL database
+% within a Docker container on an AWS EC2 instance}
+\resumeItemListEnd
