--- a/components/projects/um.tex
+++ b/components/projects/um.tex
@@ -9,6 +9,6 @@
     and \texttt{qcachegrind} and minimized expensive operations such as
     dereferencing or allocation through reuse of memory; verified performance
     gains via benchmarking against \textbf{1,000,000,000+ instruction} binaries}
-  \resumeItem{Recreated the venerable HP15-C via Assembly instructions derived from
-  the Universal Machine's ISA}
+%   \resumeItem{Recreated the venerable HP15-C via Assembly instructions derived from
+%   the Universal Machine's ISA}
         \resumeItemListEnd
