--- a/resume.tex
+++ b/resume.tex
@@ -42,7 +42,8 @@
     \input{components/projects/um}
     % \input{components/projects/globetrotter}
     \input{components/projects/photos}
-    \input{components/projects/ml}
+    % \input{components/projects/ml}
+    \input{components/projects/quic}
     % \input{components/projects/encrypted-im}
     % \input{components/projects/vfl}
     % \input{components/projects/world-clock}
