OOPS quic didn't fit

--- a/components/projects/quic.tex
+++ b/components/projects/quic.tex
@@ -14,7 +14,7 @@
 % 	performance under packet loss and high-latency conditions.}
 % \resumeItemListEnd
 \resumeProjectHeading
-{\textbf{Sealing the Leak: sHow HTTP/3 and QUIC Overcome TCP's Leaky Abstraction} $|$
+{\textbf{How HTTP/3 and QUIC Overcome TCP's Leaky Abstraction} $|$
 	\emph{Technical Writing, Networking protocols}}{December 2025}
 \resumeItemListStart
 \resumeItem{Analyzed the evolution of the HTTP protocol by researching TCP
