fix typos add new PLs

--- a/components/experience/jpmc.tex
+++ b/components/experience/jpmc.tex
@@ -21,7 +21,7 @@ Enhanced the application to provide actionable metrics for \textbf{99\% of
 requests}, iterated on live troubleshooting features, and ultimately achieved
 \textbf{100\% alignment with the product vision}.}
 
-\resumeItem{Demonstrated product proficiency and faciliated product improvements
+\resumeItem{Demonstrated product proficiency and facilitated product improvements
 by delivering a live presentation of the application to \textbf{teams
 across 20+ locations}, including senior executives and key stakeholders, resulting in
 actionable feedback, effectively showcasing the tool's utility, and providing
