--- a/components/pl.tex
+++ b/components/pl.tex
@@ -20,11 +20,39 @@
 % \end{itemize}
 
 \begin{itemize}[leftmargin=0in, label={}]
-  \scriptsize{
-    \item{
-      \textbf{Programming Languages}{: C/C++, Python, TypeScript, Golang, React, Rust, Scala, x86-64 Assembly, Standard ML, OCaml} \\
-      \textbf{Tools, Technologies \& Concepts}{: Node.js, Docker, CI/CD, AWS, MongoDB, PostgreSQL, Scikit-learn, NumPy/Pandas/Matplotlib, TensorFlow/Keras, PyTorch, Tailwind, Figma, HTML, Unit/Integration Testing, Functional \& Asynchronous Programming, Network Programming, Hyperparameter Tuning, Embedded Systems, Compiler Engineering} \\
-      \textbf{Relevant Certifications}{: AWS Certified Cloud Practitioner}
-      }
-  }
+	\scriptsize{
+	\item{
+	      \textbf{Programming Languages}{:
+		      C,
+		      C++,
+		      Embedded C,
+		      Python,
+		      TypeScript,
+		      Go,
+		      Rust,
+		      Scala,
+		      x86-64 Assembly,
+		      Standard ML,
+		      OCaml} \\
+
+	      \textbf{Tools, Technologies \& Concepts}{:
+		      Git (version control, peer code review),
+		      Node.js, Docker, CI/CD, AWS,
+		      MongoDB, PostgreSQL,
+		      Test Automation Frameworks, Firmware Quality Testing,
+		      Unit, Integration, Regression, and Sanity Testing,
+		      Test Suite Automation, Report Generation,
+		      Spreadsheet Parsing and Data Validation,
+		      Operating System,
+		      Network Programming,
+		      Embedded Systems,
+		      Hardware Schematics, Datasheet Interpretation,
+		      Compiler Engineering,
+		      Scikit-learn, NumPy, Pandas, Matplotlib,
+		      TensorFlow, Keras, PyTorch,
+		      Tailwind CSS, Figma, HTML, React} \\
+	      % \textbf{Tools, Technologies \& Concepts}{: Node.js, Docker, CI/CD, AWS, MongoDB, PostgreSQL, Scikit-learn, NumPy/Pandas/Matplotlib, TensorFlow/Keras, PyTorch, Tailwind, Figma, HTML, Unit Testing, Integration Testing, Regression Testing, Test Suite Automation, Functional Programming, Asynchronous Programming, Network Programming, Hyperparameter Tuning, Embedded Systems, Compiler Engineering, Hardware Schematics, Datasheet Analysis} \\
+	      \textbf{Relevant Certifications}{: AWS Certified Cloud Practitioner}
+	      }
+	      }
 \end{itemize}
