ADD RPC, arrivals board, edit UM

--- a/components/projects/file-copy.tex
+++ b/components/projects/file-copy.tex
@@ -1,5 +1,5 @@
 \resumeProjectHeading
-    {\textbf{File Copy} $|$ \emph{C, C++, Bash}}{September 2025 – October 2025}
+    {\textbf{File Copy} $|$ \emph{C/C++, Bash}}{September 2025 – October 2025}
         \resumeItemListStart
     \resumeItem{Developed a fault-tolerant network file transfer application, as measured by error-free transfer
     on unreliable systems, by designing a packet-level protocol over UDP that handles retransmissions, timeouts, and disk-write errors.}
