--- a/resume.tex
+++ b/resume.tex
@@ -39,10 +39,12 @@
     \resumeSubHeadingListStart
 
     \input{components/projects/file-copy}
+    \input{components/projects/rpc}
+    \input{components/projects/arrivals-board}
     \input{components/projects/um}
     % \input{components/projects/globetrotter}
-    \input{components/projects/quic}
-    \input{components/projects/photos}
+    % \input{components/projects/quic}
+    % \input{components/projects/photos}
     % \input{components/projects/ml}
     % \input{components/projects/encrypted-im}
     % \input{components/projects/vfl}
